--- a/css/styles.css
+++ b/css/styles.css
@@ -129,14 +129,15 @@ body {
 .advantages-item {}
 
 .advantages-title {
-    font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
+font-weight: 500;
+font-size: 20px;
+ line-height: 1.2;
+letter-spacing: 0.02em;
+ text-transform: capitalize;  
+  color: #2e2f42;
 }
 
-.advantages__description {
+.advantages-description {
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
@@ -159,11 +160,11 @@ body {
         text-transform: capitalize;
 }
 
-.team-list {}
-
-.team-member {
+.team-list {
     background-color: #FFFFFF;
 }
+
+.team-member {}
 
 .team-photo {}
 
@@ -189,13 +190,13 @@ body {
  .portfolio {}
 
  .portfolio-title {
-    font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #2e2f42;
-        text-transform: capitalize;
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 1.11;
+            letter-spacing: 0.02em;
+            text-align: center;
+            color: #2e2f42;
+            text-transform: capitalize;
  }
 
  .portfolio-list {}
